# msvc-cpp-unit-tests-linux-incomplete-port

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: CMakeLists.txt
include/public/: CppUnitTest.h  CppUnitTestAssert.h  TestRegistry.h
src/: CMakeLists.txt  MainImpl.cpp  TestRegistry.cpp
testApp/: CMakeLists.txt  testApp.cpp
